retrieveUnpackaged/objects/Surveyy__c.object
<CustomObject>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <label>Answer 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 1</label>
        <referenceTo>Questionn__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question 2</label>
        <referenceTo>Questionn__c</referenceTo>
        <relationshipLabel>Surveys (Question 2)</relationshipLabel>
        <relationshipName>Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Surveys</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SV{000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Question_Check</fullName>
        <active>false</active>
        <errorConditionFormula>Question_1__c  =  Question_2__c</errorConditionFormula>
        <errorDisplayField>Question_2__c</errorDisplayField>
        <errorMessage>Same Question</errorMessage>
    </validationRules>
</CustomObject>